<resources>
    <string name="create_a_new_account">Create a new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">E-mail</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="send_e_mail">Send e-mail</string>
    <string name="book_a_table">Book a table</string>
    <string name="menu">Menu</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="restaurants">Restaurants</string>
    <string name="booked">Booked</string>
    <string name="user">User</string>
    <string name="sign_in">Sign In</string>
    <string name="info">Info</string>
    <string name="free">Free</string>
    <string name="restaurant">Restaurant</string>
    <string name="description">Description</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="upload_menu">Upload menu</string>
    <string name="create_a_restaurant">Create a Restaurant</string>
    <string name="create_a_new_restaurant">Create a new restaurant</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
</resources>
